# CryptoSentinel

./: .gitignore  CLI_IMPLEMENTATION.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  FINAL_DEPLOYMENT_REPORT.md  HASHING_SECURITY_SUMMARY.md  INITIALIZATION_COMPLETE.md  LICENSE  Makefile  PROJECT_MAPPING.txt  PROJECT_STATUS.txt  QUICK_REFERENCE.md  README.md  SECURITY.md  cleanup_repo.sh  cli.py  demo_hashing_security.py  demo_ui.py  deploy_master.sh  deploy_wiki.sh  final_sync.sh  fix_wiki.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
crypto_sentinel/: __init__.py
crypto_sentinel/ciphers/: __init__.py  caesar.py  morse.py  substitution.py  vigenere.py  xor.py
crypto_sentinel/core/: __init__.py  base_analyzer.py  base_cipher.py  base_hasher.py  exceptions.py
crypto_sentinel/hashing/: __init__.py  checksum_validator.py  hash_engine.py
crypto_sentinel/security/: __init__.py  base64_tool.py  password_analyzer.py
crypto_sentinel/ui/: __init__.py  console_ui.py
crypto_sentinel/utils/: __init__.py  math_helpers.py
docs/: DEVELOPER_GUIDE.md  PROJECT_STRUCTURE.md  README.md
tests/: __init__.py
tests/test_ciphers/: __init__.py  test_classical.py
tests/test_core/: test_exceptions.py
tests/test_hashing/: test_hashes.py
tests/test_security/: test_security_tools.py
tests/test_utils/: test_math_helpers.py
wiki_docs/: Caesar-Cipher.md  Hashing-Tools.md  Home.md  Morse-Code.md  Security-Tools.md  Substitution-Cipher.md  Vigenere-Cipher.md  WIKI_SUMMARY.md  XOR-Cipher.md
wiki_temp/: Base64-Encoder-Decoder.md  Caesar-Cipher-Tool.md  File-Checksum-Validator.md  Home.md  MD5-Hash-Calculator.md  Morse-Code-Converter.md  Password-Strength-Analyzer.md  SHA256-Hash-Implementation.md  Simple-Substitution-Cracker.md  Simple-XOR-Encryption.md  Vigenere-Cipher-Tool.md  _Sidebar.md
